--- a/create_ansible_user_group.yaml
+++ b/create_ansible_user_group.yaml
@@ -3,7 +3,7 @@
 ## - hosts: all
 ## However I only want to run this on this foreman group
 - hosts:  foreman_hostgroup_rhel7
-  remote_user: ansible
+  remote_user: root
   gather_facts: no
 
   tasks:
