--- a/ping_as_ansible_user.yaml
+++ b/ping_as_ansible_user.yaml
@@ -10,7 +10,7 @@
 
   ## Ping all the effected servers. This is usefule for checking
   ## the scope of the machines it will be run against.
-    - name: Ping the servers
+    - name: Ping the servers as the ansible user.
       ping:
 
 
