--- a/ping_as_ansible_user.yaml
+++ b/ping_as_ansible_user.yaml
@@ -5,6 +5,8 @@
 - hosts:  foreman_hostgroup_rhel7
   remote_user: ansible
   gather_facts: no
+  become_user: root
+  become_method: sudo
 
   tasks:
 
