Add MOTD template and playbook

--- a/motd.yaml
+++ b/motd.yaml
@@ -15,4 +15,4 @@
   ## Ping all the effected servers. This is usefule for checking
   ## the scope of the machines it will be run against.
     - name: MOTD
-      template: src=motd.j2 dest=⁄etc⁄motd owner=root mode=0644
+      template: src=./motd.j2 dest=⁄etc⁄motd owner=root mode=0644
