--- a/motd.yaml
+++ b/motd.yaml
@@ -10,9 +10,12 @@
   become_method: sudo
 
 
+---
+- name: Setup Host Baseline
+  hosts: foreman_hostgroup_rhel7
+  roles:
+    - { role: motd }
+
   tasks:
 
-  ## Ping all the effected servers. This is usefule for checking
-  ## the scope of the machines it will be run against.
-    - name: MOTD
-      template: src=./motd.j2 dest=⁄etc⁄motd owner=root mode=0644
+
