--- a/motd.yaml
+++ b/motd.yaml
@@ -2,14 +2,14 @@
 ## So normally I would set this to
 ## - hosts: all
 ## However I only want to run this on this foreman group
-- hosts:  foreman_hostgroup_rhel7
+- hosts: foreman_hostgroup_rhel7
   remote_user: ansible
   gather_facts: yes
   become: yes
   become_user: root
   become_method: sudo
   roles:
-    - { role: motd }
+  - motd
 
 
 
