--- a/roles/motd/tasks/main.yml
+++ b/roles/motd/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 # tasks file for motd
-- name: placeholder foo
-  command: /usr/bin/w
+- name: Deploy MOTD Template
+  template: src=motd.j2 dest= ⁄etc⁄motd owner=root mode=0644
