--- a/roles/motd/tasks/main.yml
+++ b/roles/motd/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
 # tasks file for motd
 - name: Deploy MOTD Template
-  template: src=motd.j2 dest= ⁄etc⁄motd owner=root mode=0644
+  template:
+    src: motd.j2
+    dest: ⁄etc⁄motd
+    owner: root
+    mode: 0644
