With simple AIDE fix

--- a/roles/rhel7_pci_remediation/tasks/configure_aide.yaml
+++ b/roles/rhel7_pci_remediation/tasks/configure_aide.yaml
@@ -9,4 +9,4 @@
       hour: 12
       user: root
       job: "/usr/sbin/aide --check"
-      cron_file: ansible_aide_check
+#      cron_file: ansible_aide_check
