--- a/roles/rhel7_pci_remediation/tasks/configure_aide.yaml
+++ b/roles/rhel7_pci_remediation/tasks/configure_aide.yaml
@@ -1,12 +1,18 @@
 ---
 # Installs a crontab AIDE check. This way we create a nice entry in /etc/cron.d
 # it's personal preference, but I think this is a cleaner way of doing cron.
+
+# Unfortunately, this particular OpenSCAP check looks for a specific line in /etc/crontab.
+# Profile needs to be fixed. Will be raising a ticket.
   - name: Install the AIDE crontab entry
-    cron:
-      name: yum autoupdate
-      weekday: 2
-      minute: 0
-      hour: 12
-      user: root
-      job: "/usr/sbin/aide --check"
+#    cron:
+#      name: yum autoupdate
+#      weekday: 2
+#      minute: 0
+#      hour: 12
+#      user: root
+#      job: "/usr/sbin/aide --check"
 #      cron_file: ansible_aide_check
+    shell: echo "05 4 * * * root /usr/sbin/aide --check" >> /etc/crontab
+
+
