Configure max age

--- a/roles/rhel7_pci_remediation/tasks/password_set_max_age.yaml
+++ b/roles/rhel7_pci_remediation/tasks/password_set_max_age.yaml
@@ -1,11 +1,13 @@
 ---
-  - name: Copy the password max age script to the host/
-  template:
+  - name: Copy the password max age script to the host
+    template:
       src: set_max_password_age.sh.j2
       dest: /tmp/set_max_password_age.sh
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
+    become: yes
 
-  command: /tmp/set_max_password_age.sh
-  become: yes
+  - name: Execute the password max age script
+    command: /tmp/set_max_password_age.sh
+    become: yes
