Configure password expiration

--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -7,6 +7,6 @@
   - name: "Secure and user and password policies"
     #include: no_empty_passwords.yaml
     include: password_set_max_age.yaml
-    #include: set_password_expiraion.yaml
+    include: password_set_expiraion.yaml
     #include: set_password_complexity.yaml
     #include: set_password_length.yaml
