Configure password expiration

--- a/roles/rhel7_pci_remediation/tasks/password_set_expiration.yaml
+++ b/roles/rhel7_pci_remediation/tasks/password_set_expiration.yaml
@@ -1,7 +1,7 @@
 ---
   - name: Copy the password max age script to the host
     template:
-      src: set_max_password_age.sh.j2
+      src: set_max_password_expirationj2
       dest: /tmp/set_max_password_expiration.sh
       owner: root
       group: wheel
