--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -5,7 +5,7 @@
     include: configure_aide.yaml
 
   - name: "Secure and user and password policies"
-    #include: no_empty_passwords.yaml
+    include: no_empty_passwords.yaml
     include: password_set_max_age.yaml
     include: password_set_expiration.yaml
     #include: set_password_complexity.yaml
