No empty passwords

--- a/roles/rhel7_pci_remediation/tasks/no_empty_passwords.yaml
+++ b/roles/rhel7_pci_remediation/tasks/no_empty_passwords.yaml
@@ -1,5 +1,5 @@
 ---
-  - name: Copy the password max age script to the host
+  - name: Copy the empty password script to the host
     template:
       src: set_no_empty_passwords.sh.j2
       dest: /tmp/set_no_empty_passwords.sh
@@ -8,6 +8,6 @@
       mode: "u=rwx,g=r,o=r"
     become: yes
 
-  - name: Execute the password max age script
+  - name: Execute the empty password script
     command: /tmp/set_no_empty_passwords.sh
     become: yes
