No empty passwords

--- a/roles/rhel7_pci_remediation/tasks/password_set_expiration.yaml
+++ b/roles/rhel7_pci_remediation/tasks/password_set_expiration.yaml
@@ -1,5 +1,5 @@
 ---
-  - name: Copy the password max age script to the host
+  - name: Copy the set expiration  script to the host
     template:
       src: set_max_password_expiration.j2
       dest: /tmp/set_max_password_expiration.sh
@@ -8,6 +8,6 @@
       mode: "u=rwx,g=r,o=r"
     become: yes
 
-  - name: Execute the password max age script
+  - name: Execute the set password expiration script
     command: /tmp/set_max_password_expiration.sh
     become: yes
