--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
   - name: "Setup and configure AIDE"
     include: install_aide.yaml
+
+  - name: "Build AIDE database"
     include: build_aide_db.yaml
     include: configure_aide.yaml
 
