--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -11,3 +11,39 @@
   - name: Execute the password max age script
     command: /tmp/set_min_password_digits.sh
     become: yes
+
+  - name: Set minimum password length
+    template:
+      src: set_min_password_digits.sh.j2
+      dest: /tmp/set_min_password_length.sh
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+    command: /tmp/set_min_password_length.sh
+    become: yes
+
+  - name: Set minimum uppercase chars in passwords
+    template:
+      src: set_min_ucase_passwords.sh.j2
+      dest: /tmp/set_min_ucase_passwords.sh.j2
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+    command: set_min_ucase_passwords.sh.j2
+    become: yes
+
+  - name: Set minimum lowercase chars in passwords
+    template:
+      src: set_min_lcase_passwords.sh.j2
+      dest: /tmp/set_min_lcase_passwords.sh.j2
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+    command: /tmp/set_min_lcase_passwords.sh.j2
+    become: yes
