No empty passwords

--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -21,6 +21,7 @@
       mode: "u=rwx,g=r,o=r"
     become: yes
 
+  - name: Set minimum password length script
     command: /tmp/set_min_password_length.sh
     become: yes
 
@@ -33,6 +34,7 @@
       mode: "u=rwx,g=r,o=r"
     become: yes
 
+  - name: Set minimum uppercase chars in passwords script
     command: set_min_ucase_passwords.sh.j2
     become: yes
 
@@ -45,5 +47,6 @@
       mode: "u=rwx,g=r,o=r"
     become: yes
 
+  - name: Set minimum lowercase chars in passwords script
     command: /tmp/set_min_lcase_passwords.sh.j2
     become: yes
