No empty passwords

--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -35,7 +35,7 @@
     become: yes
 
   - name: Set minimum uppercase chars in passwords script
-    command: set_min_ucase_passwords.sh.j2
+    command: /tmp/set_min_ucase_passwords.sh.j2
     become: yes
 
   - name: Set minimum lowercase chars in passwords
