Trying to fix length

--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -14,7 +14,7 @@
 
   - name: Set minimum password length
     template:
-      src: set_min_password_digits.sh.j2
+      src: set_min_password_length.sh.j2
       dest: /tmp/set_min_password_length.sh
       owner: root
       group: wheel
