Trying to fix password length

--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -50,3 +50,16 @@
   - name: Set minimum lowercase chars in passwords script
     command: /tmp/set_min_lcase_passwords.sh.j2
     become: yes
+
+  - name: Set deny repeated failed attempts
+    template:
+      src: set_deny_failed_password_attampts.sh.j2
+      dest: /tmp/set_deny_failed_password_attampts.sh.j2
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+  - name: Run repeat failed login deny script
+    command: /tmp/set_deny_failed_password_attampts.sh.j2
+    become: yes
