Trying to fix password length

--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -54,12 +54,38 @@
   - name: Set deny repeated failed attempts
     template:
       src: set_deny_failed_password_attampts.sh.j2
-      dest: /tmp/set_deny_failed_password_attampts.sh.j2
+      dest: /tmp/set_deny_failed_password_attampts.sh
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
     become: yes
 
   - name: Run repeat failed login deny script
-    command: /tmp/set_deny_failed_password_attampts.sh.j2
+    command: /tmp/set_deny_failed_password_attampts.sh
+    become: yes
+
+  - name: Set password lockout time
+    template:
+      src: set_deny_failed_password_attampts.sh.j2
+      dest: /tmp/set_password_lockout_time.sh
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+  - name: Run password lockout time script
+    command: /tmp/set_password_lockout_time.sh
+    become: yes
+
+  - name: Set password reuse
+    template:
+      src: set_password_reuse.sh.j2
+      dest: /tmp/set_password_reuse.sh
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+  - name: Run password lockout reuse
+    command: /tmp/set_password_reuse.sh
     become: yes
