--- a/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_password_complexity.yaml
@@ -66,7 +66,7 @@
 
   - name: Set password lockout time
     template:
-      src: set_deny_failed_password_attampts.sh.j2
+      src: set_password_lockout_time.j2
       dest: /tmp/set_password_lockout_time.sh
       owner: root
       group: wheel
