--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -16,6 +16,10 @@
 
   - name: "Set passwords to expire"
     include: password_set_expiration.yaml
+
   - name: "Set password complexity"
     include: set_password_complexity.yaml
     #include: set_password_length.yaml
+
+  - name: Harden default OS settings"
+    include: set_secure_settings.yaml
