--- a/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
@@ -12,3 +12,15 @@
     command: /tmp/set_pam_hash.sh
     become: yes
 
+  - name: Set pam hashing algorith,
+    template:
+      src: set_password_login_hash.sh.j2
+      dest: /tmp/set_password_login_hash.sh
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+  - name: Execute the set pam hashing alogrithm script
+    command: /tmp/set_password_login_hash.sh
+    become: yes
