Trying to fix password length

--- a/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
@@ -24,3 +24,16 @@
   - name: Execute the set pam hashing alogrithm script
     command: /tmp/set_password_login_hash.sh
     become: yes
+
+  - name: Set libuser hashing algorith,
+    template:
+      src: set_libusr_hash.sh.j2
+      dest: /tmp/set_libusr_hash.sh
+      owner: root
+      group: wheel
+      mode: "u=rwx,g=r,o=r"
+    become: yes
+
+  - name: Execute the set libuser hashing alogrithm script
+    command: /tmp/set_libusr_hash.sh
+    become: yes
