Trying to fix password length

--- a/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_secure_settings.yaml
@@ -27,7 +27,7 @@
 
   - name: Set libuser hashing algorith,
     template:
-      src: set_libusr_hash.sh.j2
+      src: set_libusr_hash.j2
       dest: /tmp/set_libusr_hash.sh
       owner: root
       group: wheel
