--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -26,3 +26,6 @@
 
   - name: "Install security related packages"
     include: install_other_secure_packages.yaml
+
+  - name: "Configure audit settings"
+    include: set_autid_settings.yaml
