Added audit settings

--- a/roles/rhel7_pci_remediation/tasks/main.yml
+++ b/roles/rhel7_pci_remediation/tasks/main.yml
@@ -28,4 +28,4 @@
     include: install_other_secure_packages.yaml
 
   - name: "Configure audit settings"
-    include: set_autid_settings.yaml
+    include: set_auditd_settings.yaml
