--- a/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
@@ -13,13 +13,12 @@
     become: yes
 
   - name: Detect adjtimex tamper policies
-    template:
+    copy:
       src: set_auditd_tamper_adjtimex.sh.j2
-      dest: /tmp/set_auditd_tamper_adjtimex.sh
+      dest: /tmp/set_auditd_tamper_adjtimex.sh.j2
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
-    become: yes
 
   - name: Execute the Detect adjtimex tamper policies script
     command: /tmp/set_auditd_tamper_adjtimex.sh
