--- a/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
@@ -19,59 +19,61 @@
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
+    become: yes
 
   - name: Execute the Detect adjtimex tamper policies script
     command: /tmp/set_auditd_tamper_adjtimex.sh.j2
     become: yes
 
   - name: Detect csettime tamper policies
-    template:
+    copy:
       src: set_auditd_tamper_csettime.sh.j2
-      dest: /tmp/set_auditd_tamper_csettime.sh
+      dest: /tmp/set_auditd_tamper_csettime.sh.j2
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
     become: yes
 
+
   - name: Execute the Detect adjtimes tamper policies script
-    command: /tmp/set_auditd_tamper_csettime.sh
+    command: /tmp/set_auditd_tamper_csettime.sh.j2
     become: yes
 
   - name: Detect localtime tamper policies
-    template:
+    copy:
       src: set_auditd_tamper_localtime.sh.j2
-      dest: /tmp/set_auditd_tamper_localtime.sh
+      dest: /tmp/set_auditd_tamper_localtime.sh.j2
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
     become: yes
 
   - name: Execute the Detect localtime tamper policies script
-    command: /tmp/set_auditd_tamper_localtime.sh
+    command: /tmp/set_auditd_tamper_localtime.sh.j2
     become: yes
 
   - name: Detect stime tamper policies
-    template:
+    copy:
       src: set_auditd_tamper_stime.sh.j2
-      dest: /tmp/set_auditd_tamper_stime.sh
+      dest: /tmp/set_auditd_tamper_stime.sh.j2
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
     become: yes
 
   - name: Execute the Detect localtime tamper policies script
-    command: /tmp/set_auditd_tamper_stime.sh
+    command: /tmp/set_auditd_tamper_stime.sh.j2
     become: yes
 
   - name: Detect setimeofday tamper policies
-    template:
+    copy:
       src: set_auditd_tamper_stod.sh.j2
-      dest: /tmp/set_auditd_tamper_stod.sh
+      dest: /tmp/set_auditd_tamper_stod.sh.j2
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
     become: yes
 
   - name: Execute the Detect localtime tamper policies script
-    command: /tmp/set_auditd_tamper_stod.sh
+    command: /tmp/set_auditd_tamper_stod.sh.j2
     become: yes
