Added audit settings

--- a/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
+++ b/roles/rhel7_pci_remediation/tasks/set_audit_settings.yaml
@@ -81,7 +81,7 @@
   - name: Configure file policies
     copy:
       src: "{{ item }}"
-      dest: /tmp/set_auditd_tamper_stod.sh.j2
+      dest: "/tmp/{{ item }}"
       owner: root
       group: wheel
       mode: "u=rwx,g=r,o=r"
