--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -35,8 +35,7 @@
 
     - name: Waiting for server to come back up
       local_action:
-        wait_for
-        host="{{ inventory_hostname }}"
+        wait_for host="{{ inventory_hostname }}"
         port=22
         delay=60
         timeout=60
