Added kernel update

--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -26,15 +26,15 @@
       register: reboot
       ignore_errors: true
 
-    - name: Reboot required
-      command: shutdown -r now "Ansible kernel update applied"
-      async: 1
-      poll: 0
-      ignore_errors: true
-      when: reboot.changed
+- name: restart server
+  shell: sleep 2 && shutdown -r now
+  async: 1
+  poll: 0
+  become: yes
+  become_method: sudo
+  ignore_errors: true
 
-
-    - name: Task3 waiting for server to come back after 10.04 to 12.04
-      local_action: wait_for host={{ ansible_ssh_host }} state=started
+- name: waiting for server to come back after reboot
+  local_action: wait_for host={{ ansible_ssh_host }} state=started port=22 delay=30 timeout=300 connect_timeout=15
 
 
