--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -31,10 +31,15 @@
       async: 1
       poll: 0
       become: yes
-      become_method: sudo
       ignore_errors: true
 
     - name: waiting for server to come back after reboot
-      local_action: wait_for host={{ ansible_ssh_host }} state=started port=22 delay=30 timeout=300 connect_timeout=15
+      local_action:
+        wait_for host:  {{ ansible_ssh_host }}
+        state:  started
+        port: 22
+        delay:  30
+        timeout:  300
+        connect_timeout:  15
 
 
