Added kernel update

--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -35,7 +35,7 @@
 
     - name: waiting for server to come back after reboot
       local_action:
-        wait_for host:  {{ ansible_ssh_host }}
+        wait_for host:  "{{ ansible_ssh_host }}"
         state:  started
         port: 22
         delay:  30
