--- a/update_kernel.yaml
+++ b/update_kernel.yaml
@@ -33,13 +33,14 @@
       become: yes
       ignore_errors: true
 
-    - name: waiting for server to come back after reboot
+    - name: Waiting for server to come back up
       local_action:
-        wait_for host:  "{{ ansible_ssh_host }}"
-        state:  started
-        port: 22
-        delay:  30
-        timeout:  300
-        connect_timeout:  15
+        wait_for
+        host="{{ inventory_hostname }}"
+        port=22
+        delay=10
+        timeout=60
+      become: false
+      when: reboot.changed
 
 
