--- a/deply_web_content.yaml
+++ b/deply_web_content.yaml
@@ -4,5 +4,11 @@
   roles:
     - { role: web_content }
 
+- name: Open the firewall on port 80
+  firewalld:
+    service: http
+    permanent: true
+    state: enabled
+
 
 
