--- a/roles/node_configure/tasks/main.yml
+++ b/roles/node_configure/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+  - name: "Ensure we can log in as the Ansible user."
+    include: ping_as_ansible_user.yaml
+    
   - name: "Generate and deploy the MOTD"
     include: motd.yaml
 
