Added defaults for configure

--- a/node_remediate.yaml
+++ b/node_remediate.yaml
@@ -2,7 +2,7 @@
 - name: Make the node compliant with the PCI-DSS v3 standard.
   hosts:  foreman_hostgroup_rhel7
   roles:
-    - { role: node_remediation }
+    - { role: node_remediate }
 
 
 
