--- a/roles/node_remediate/tasks/set_audit_settings.yaml
+++ b/roles/node_remediate/tasks/set_audit_settings.yaml
@@ -122,6 +122,7 @@
       - make_auditd_immutable.sh
       - set_extra_ntps_servers.sh
       - set_ssh_idle.sh
+      - audit_mac_events.sh
     become: yes
 
   - name: Execute the Detect localtime tamper policies script
@@ -154,6 +155,7 @@
       - make_auditd_immutable.sh
       - set_extra_ntps_servers.sh
       - set_ssh_idle.sh
+      - audit_mac_events.sh
     become: yes
 
 
