--- a/roles/node_patch/tasks/update_kernel.yaml
+++ b/roles/node_patch/tasks/update_kernel.yaml
@@ -1,20 +1,9 @@
 ---
-## So normally I would set this to
-## - hosts: all
-## However I only want to run this on this foreman group
-- hosts:  foreman_hostgroup_rhel7
-  remote_user: ansible
-  gather_facts: no
-  become: yes
-  become_user: root
-  become_method: sudo
-
-
   tasks:
 
   ## Ping all the effected servers. This is usefule for checking
   ## the scope of the machines it will be run against.
-    - name: Update the kernel packages
+    - name: "Update the kernel on {{ inventory_hostname }}"
       yum:
         name: 'kernel*'
         state: latest
@@ -26,14 +15,14 @@
       register: reboot
       ignore_errors: true
 
-    - name: restart server
+    - name: "rebooting server {{ inventory_hostname }}"
       shell: sleep 2 && shutdown -r now
       async: 1
       poll: 0
       become: yes
       ignore_errors: true
 
-    - name: Waiting for server to come back up
+    - name: "Waiting for server {{ inventory_hostname }} to come back up"
       local_action:
         wait_for
         host="{{ inventory_hostname }}"
