--- a/roles/node_deploy/tasks/main.yml
+++ b/roles/node_deploy/tasks/main.yml
@@ -2,3 +2,8 @@
 # tasks file for node_deploy
   - name: "Open the firewall ports for the specific application deployment"
     include: open_http_firewall.yaml
+
+---
+# tasks file for node_deploy
+  - name: "Install the webserver"
+    include: install_apache.yaml
