--- a/roles/node_deploy/tasks/main.yml
+++ b/roles/node_deploy/tasks/main.yml
@@ -3,5 +3,10 @@
   - name: "Open the firewall ports for the specific application deployment"
     include: open_http_firewall.yaml
 
-  - name: "Install the webserver"
-    include: install_apache.yaml
+  - name: ensure apache is running (and enable it at boot)
+    service: name=httpd state=started enabled=yes
+
+  - name: write the apache config file
+    yum: name=httpd state=latest
+    notify:
+    - restart apache
