Added defaults for configure

--- a/roles/node_deploy/tasks/install_apache.yaml
+++ b/roles/node_deploy/tasks/install_apache.yaml
@@ -3,14 +3,9 @@
     yum: name=httpd
 
   - name: start the httpd service
-    service: name=httpd state=started
+    service: name=httpd state=started enabled=yes
+    notify:
+    - restart apache
 
   - name: Open port 80
     firewalld: service=http permanent=true state=enabled
-
-  - name: start the firewalld service
-    service: name=firewalld state=restarted
-
-  handlers:
-    - name: restart apache
-      service: name=httpd state=restarted
