--- a/roles/node_deploy/tasks/main.yml
+++ b/roles/node_deploy/tasks/main.yml
@@ -7,4 +7,4 @@
     include: install_apache.yaml
 
   - name: "Copy website over"
-    include: install_apache.yaml
+    include: copy_static_site.yaml
