Changed hosts to be all

--- a/node_configure.yaml
+++ b/node_configure.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Configure the target node into a known state.
-  hosts:  foreman_hostgroup_rhel7
+  hosts:  all
   roles:
     - { role: node_configure }
 
