--- a/node_remediate.yaml
+++ b/node_remediate.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Make the node compliant with the PCI-DSS v3 standard.
-  hosts:  foreman_hostgroup_rhel7
+  hosts:  all
   roles:
     - { role: node_remediate }
 
