--- a/roles/node_configure/tasks/main.yml
+++ b/roles/node_configure/tasks/main.yml
@@ -8,5 +8,10 @@
   - name: "Install the base packages all machines require."
     include: install_essential_packages.yaml
 
+  - name: start the firewalld service
+    service: name=firewalld state=started enabled=yes
+    notify:
+    - restart firewalld
 
-
+  - name: "Open the SSH port"
+    include: open_ssh_firewall.yaml
