--- a/roles/node_deploy/tasks/install_custom_facts.yaml
+++ b/roles/node_deploy/tasks/install_custom_facts.yaml
@@ -5,8 +5,8 @@
       state: "directory"
   - name: "Insert custom fact file"
     copy:
-      src: files/custom.fact
-      dest: /etc/ansible/facts.d/custom.fact
+      src: files/*.fact
+      dest: /etc/ansible/facts.d/
       mode: 0755
 
   - name: "Re-run setup to use custom facts"
