--- a/roles/node_deploy/tasks/install_custom_facts.yaml
+++ b/roles/node_deploy/tasks/install_custom_facts.yaml
@@ -3,10 +3,17 @@
     file:
       path: "/etc/ansible/facts.d"
       state: "directory"
+
   - name: "Insert custom fact file"
     copy:
-      src: files/*.fact
-      dest: /etc/ansible/facts.d/
+      src: files/custom.fact
+      dest: /etc/ansible/facts.d/custom.fact
+      mode: 0755
+
+  - name: "Insert /etc/ansible fs custom fact file"
+    copy:
+      src: files/get_etc_files.fact
+      dest: /etc/ansible/facts.d/get_etc_files.fact
       mode: 0755
 
   - name: "Re-run setup to use custom facts"
