Add rollback tag

--- a/roles/node_deploy/tasks/main.yml
+++ b/roles/node_deploy/tasks/main.yml
@@ -10,3 +10,6 @@
 
   - name: "Copy website over"
     include: build_variable_page.yaml
+
+  - name: "Build Foreman Page"
+    include: build_foreman_page.yaml
