Updated documentation for the node_configure role.

--- a/roles/node_configure/defaults/main.yml
+++ b/roles/node_configure/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 MOTD_IMPORTANT: "This is the default message"
+ESSENTIAL_PACKAGES:
+  - tree
+  - vim
+  - git
+  - rubygem-foreman_scap_client
