--- a/roles/node_configure/tasks/install_essential_packages.yaml
+++ b/roles/node_configure/tasks/install_essential_packages.yaml
@@ -6,9 +6,5 @@
       state: latest
 
   ## This list is the name of the RPM's we are looking to install.
-    with_items:
-      - tree
-      - vim
-      - git
-      - rubygem-foreman_scap_client
+    with_items: "{{ ESSENTIAL_PACKAGES }}"
     become: yes
