--- a/roles/node_configure/tasks/main.yml
+++ b/roles/node_configure/tasks/main.yml
@@ -1,12 +1,15 @@
 ---
   - name: "Ensure we can log in as the Ansible user."
     include: ping_as_ansible_user.yaml
+    tags: ['ping']
 
   - name: "Generate and deploy the MOTD"
     include: motd.yaml
+    tags: ['motd']
 
   - name: "Install the base packages all machines require."
     include: install_essential_packages.yaml
+
 
   - name: start the firewalld service
     service: name=firewalld state=started enabled=yes
