--- a/roles/node_scan/tasks/main.yml
+++ b/roles/node_scan/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
   - name: "Generate an OpenSCAP report for hosts."
-    include: run_openscap_report.yaml
+    include_tasks: run_openscap_report.yaml
