--- a/roles/node_deploy/tasks/main.yml
+++ b/roles/node_deploy/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for node_deploy
   - name: "Open the firewall ports for the specific application deployment"
-    include: open_http_firewall.yaml
+    include_tasks: open_http_firewall.yaml
 
   - name: "Install Apache"
-    include: install_apache.yaml
+    include_tasks: install_apache.yaml
 
 
