--- a/roles/node_foreman_content/tasks/main.yml
+++ b/roles/node_foreman_content/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 # tasks file for node_deploy
   - name: "Deploy custom facts"
-    include: install_custom_facts.yaml
+    include_tasks: install_custom_facts.yaml
 
   - name: "Copy website over"
-    include: build_variable_page.yaml
+    include_tasks: build_variable_page.yaml
 
   - name: "Build Foreman Page"
-    include: build_foreman_page.yaml
+    include_tasks: build_foreman_page.yaml
