--- a/roles/node_sanitise/tasks/main.yml
+++ b/roles/node_sanitise/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
   - name: "Ensure the server is contactable as the root user."
-    include: ping_as_root_user.yaml
+    include_tasks: ping_as_root_user.yaml
 
   - name: "Create the Ansible group."
-    include: create_ansible_group.yaml
+    include_tasks: create_ansible_group.yaml
 
   - name: "Create the Ansible user."
-    include: create_ansible_user.yaml
+    include_tasks: create_ansible_user.yaml
 
   - name: "Copy the tower SSH key for passwordless access."
-    include: install_tower_ssh_key.yaml
+    include_tasks: install_tower_ssh_key.yaml
 
   - name: "Configure sudo to allow members of the wheel group passwordless sudo access."
-    include: enable_ansible_sudo_access.yaml
+    include_tasks: enable_ansible_sudo_access.yaml
 
   - name: "Configure sudo to allow members of the wheel group passwordless sudo access."
-    include: add_ansible_to_wheel_group.yaml
+    include_tasks: add_ansible_to_wheel_group.yaml
 
 
   ## Verify the host is contactable. We are testing we can
