--- a/roles/node_patch/tasks/main.yml
+++ b/roles/node_patch/tasks/main.yml
@@ -2,6 +2,8 @@
 # tasks file for node_deploy
   - name: "Patch the kernel and reboot if required."
     include_tasks: update_kernel.yaml
+    tags: ['update_kernel','setup']
 
   - name: "Patch minimal security patches."
     include_tasks: update-security-only.yaml
+    tags: ['update_os','setup']
