--- a/roles/node_sanitise/tasks/main.yml
+++ b/roles/node_sanitise/tasks/main.yml
@@ -1,24 +1,27 @@
 ---
   - name: "Ensure the server is contactable as the root user."
     include_tasks: ping_as_root_user.yaml
+    tags: ['ping','ping_as_root','setup']
 
   - name: "Create the Ansible group."
     include_tasks: create_ansible_group.yaml
+    tags: ['create_nonpriv_group','setup_nonpriv','setup']
 
   - name: "Create the Ansible user."
     include_tasks: create_ansible_user.yaml
+    tags: ['create_nonpriv_user','setup_nonpriv','setup']
 
   - name: "Copy the tower SSH key for passwordless access."
     include_tasks: install_tower_ssh_key.yaml
+    tags: ['create_nonpriv_key','setup_nonpriv','setup']
 
   - name: "Configure sudo to allow members of the wheel group passwordless sudo access."
     include_tasks: enable_ansible_sudo_access.yaml
+    tags: ['configure_sudo','setup_nonpriv','setup']
 
   - name: "Configure sudo to allow members of the wheel group passwordless sudo access."
     include_tasks: add_ansible_to_wheel_group.yaml
+    tags: ['configure_sudo','setup_nonpriv','setup']
 
-
-  ## Verify the host is contactable. We are testing we can
-  ## connect as the ansible user but use sudo.
 
 
