--- a/roles/node_foreman_content/tasks/notify_build_complete.yaml
+++ b/roles/node_foreman_content/tasks/notify_build_complete.yaml
@@ -8,4 +8,4 @@
       to: '{{ GMAIL_RECIPIENT }} '
       subject: Build Report for '{{ ansible_hostname }}'
       body: 'System {{ ansible_hostname }} has been successfully provisioned.'
-    delegate_to: localhost
+    become: yes
