--- a/mail_result.yaml
+++ b/mail_result.yaml
@@ -1,17 +1,14 @@
-- name: Attempt to mail results
-  hosts:  all
 
-# Sending an e-mail using Gmail SMTP servers
-  - tasks:
-    - mail:
-        host: smtp.gmail.com
-        port: 587
-        username: '{{ GMAIL_USER }}'
-        password: '{{ GMAIL_PASSWORD }}'
-        to: '{{ GMAIL_RECIPIENT }} '
-        subject: Build Report for '{{ ansible_hostname }}'
-        body: 'System {{ ansible_hostname }} has been successfully provisioned.'
-      delegate_to: localhost
+---
+- hosts:  all
 
-
-
+  tasks:
+  - mail:
+      host: smtp.gmail.com
+      port: 587
+      username: '{{ GMAIL_USER }}'
+      password: '{{ GMAIL_PASSWORD }}'
+      to: '{{ GMAIL_RECIPIENT }} '
+      subject: Build Report for '{{ ansible_hostname }}'
+      body: 'System {{ ansible_hostname }} has been successfully provisioned.'
+    delegate_to: localhost
