--- a/mail_result.yaml
+++ b/mail_result.yaml
@@ -11,4 +11,5 @@
       to: '{{ GMAIL_RECIPIENT }} '
       subject: Build Report for '{{ ansible_hostname }}'
       body: 'System {{ ansible_hostname }} has been successfully provisioned.'
+      secure: always
     delegate_to: localhost
